# data-valuation

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: noise_detection.ipynb
src/data_valuation/: __init__.py
src/data_valuation/core/: __init__.py  base_valuator.py  dvrl_valuator.py  loo_valuator.py  shapley_valuator.py
src/data_valuation/models/: dvrl.py  features_model.py  mlp.py
src/data_valuation/utils/: data_utils.py  metrics.py  training.py
tests/: test_main.py
